adding proofs for SMT lemmas.